--- a/trambleo/src/main/resources/org/example/trambleo/hello-pageCompte.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-pageCompte.fxml
@@ -9,6 +9,7 @@
 
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <fx:include source="hello-navbar.fxml" />
    <children>
       <Label prefHeight="56.0" prefWidth="149.0" text="Mon compte">
          <font>
