--- a/trambleo/src/main/resources/org/example/trambleo/hello-pageCompte.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-pageCompte.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label prefHeight="56.0" prefWidth="149.0" text="Mon compte">
          <font>
@@ -60,12 +60,13 @@
                </padding>
             </Label>
             <Label prefHeight="62.0" prefWidth="62.0" text="Label" />
+            <Button mnemonicParsing="false" text="Modifier adresse e-mail" />
          </children>
          <VBox.margin>
             <Insets bottom="15.0" />
          </VBox.margin>
       </HBox>
-      <Button mnemonicParsing="false" style="-fx-background-color: #847CAE;" text="Modifier le mot de passe">
+      <Button mnemonicParsing="false" style="-fx-background-color: #847CAE;" text="Modifier mot de passe">
          <VBox.margin>
             <Insets bottom="15.0" left="15.0" />
          </VBox.margin>
