--- a/trambleo/src/main/resources/org/example/trambleo/hello-navbar.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-navbar.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="1280.0" style="-fx-background-color: #847CAE;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="1280.0" style="-fx-background-color: #847CAE;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerNavbar">
    <children>
-      <Label prefHeight="66.0" prefWidth="202.0" text="Mes projets" textFill="WHITE">
+      <Label onMouseClicked="#onCompteButtonClick" prefHeight="66.0" prefWidth="202.0" text="Mes projets" textFill="WHITE">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
