--- a/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
@@ -7,30 +7,33 @@
 <?import javafx.scene.text.Font?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerMesProjets">
-   <padding>>
-    <fx:include source="hello-navbar.fxml" />
-   <Label prefHeight="49.0" prefWidth="144.0" text="Mes projets">
-      <VBox.margin>
-         <Insets left="15.0" />
-      </VBox.margin>
-      <font>
-         <Font name="System Bold" size="25.0" />
-      </font>
-   </Label>
-   <HBox prefHeight="638.0" prefWidth="1280.0">
-      <VBox.margin>
-         <Insets left="15.0" right="15.0" />
-      </VBox.margin>
-      <padding>
-         <Insets bottom="15.0" left="15.0" right="50.0" top="15.0" />
-      </padding>
-      <fx:include source="hello-carteProjet.fxml" />
-      <fx:include source="hello-carteProjet.fxml" />
-      <fx:include source="hello-carteProjet.fxml" />
-      <fx:include source="hello-carteProjet.fxml" />
-      <fx:include source="hello-carteProjet.fxml" />
-
-   </HBox>
+   <padding>
+      <Insets />
+   </padding>
    <children>
+      <fx:include source="hello-navbar.fxml" />
+      <Label prefHeight="49.0" prefWidth="144.0" text="Mes projets">
+         <VBox.margin>
+            <Insets left="15.0" />
+         </VBox.margin>
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Label>
+      <HBox prefHeight="638.0" prefWidth="1280.0">
+         <VBox.margin>
+            <Insets left="15.0" right="15.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="15.0" left="15.0" right="50.0" top="15.0" />
+         </padding>
+         <children>
+            <fx:include source="hello-carteProjet.fxml" />
+            <fx:include source="hello-carteProjet.fxml" />
+            <fx:include source="hello-carteProjet.fxml" />
+            <fx:include source="hello-carteProjet.fxml" />
+            <fx:include source="hello-carteProjet.fxml" />
+         </children>
+      </HBox>
    </children>
 </VBox>
