--- a/trambleo/src/main/resources/org/example/trambleo/hello-navbar.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-navbar.fxml
@@ -7,7 +7,7 @@
 
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="1280.0" style="-fx-background-color: #847CAE;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerNavbar">
    <children>
-      <Label onMouseClicked="#onCompteButtonClick" prefHeight="66.0" prefWidth="202.0" text="Mes projets" textFill="WHITE">
+      <Label onMouseClicked="#onProjetButtonClick" prefHeight="66.0" prefWidth="202.0" text="Mes projets" textFill="WHITE">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
@@ -18,7 +18,7 @@
             <Insets left="15.0" />
          </padding>
       </Label>
-      <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="66.0" prefWidth="1128.0" text="Mon compte" textFill="WHITE">
+      <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" onMouseClicked="#onCompteButtonClick" prefHeight="66.0" prefWidth="1128.0" text="Mon compte" textFill="WHITE">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
