--- a/trambleo/src/main/resources/org/example/trambleo/hello-pageCompte.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-pageCompte.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerPageCompte">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.Controller.HelloControllerPageCompte">
    <fx:include source="hello-navbar.fxml" />
    <Label prefHeight="62.0" prefWidth="236.0" text="Mon compte">
       <font>
