--- a/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -13,16 +12,14 @@
    </padding>
    <children>
       <fx:include source="hello-navbar.fxml" />
-      <HBox prefHeight="100.0" prefWidth="200.0">
-         <children>
-            <Label prefHeight="49.0" prefWidth="144.0" text="Mes projets">
-               <font>
-                  <Font name="System Bold" size="25.0" />
-               </font>
-            </Label>
-            <Button mnemonicParsing="false" text="Nouveau Projet" />
-         </children>
-      </HBox>
+      <Label prefHeight="49.0" prefWidth="144.0" text="Mes projets">
+         <VBox.margin>
+            <Insets left="15.0" />
+         </VBox.margin>
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Label>
       <HBox prefHeight="638.0" prefWidth="1280.0">
          <VBox.margin>
             <Insets left="15.0" right="15.0" />
