--- a/trambleo/src/main/resources/org/example/trambleo/hello-navbar.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-navbar.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 
 <?import javafx.scene.layout.Region?>
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="1280.0" style="-fx-background-color: #847CAE;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.Controller.HelloControllerNavbar">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="1280.0" style="-fx-background-color: #847CAE;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerNavbar">
    <children>
       <Label onMouseClicked="#onProjetButtonClick" prefHeight="66.0" prefWidth="202.0" text="Mes projets" textFill="WHITE">
          <font>
