--- a/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -12,14 +13,16 @@
    </padding>
    <children>
       <fx:include source="hello-navbar.fxml" />
-      <Label prefHeight="49.0" prefWidth="144.0" text="Mes projets">
-         <VBox.margin>
-            <Insets left="15.0" />
-         </VBox.margin>
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
+      <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Label prefHeight="49.0" prefWidth="144.0" text="Mes projets">
+               <font>
+                  <Font name="System Bold" size="25.0" />
+               </font>
+            </Label>
+            <Button mnemonicParsing="false" onAction="#onNouveauProjetButtonClick" text="Créer un projet" />
+         </children>
+      </HBox>
       <HBox prefHeight="638.0" prefWidth="1280.0">
          <VBox.margin>
             <Insets left="15.0" right="15.0" />
