bouton editEmail & editPassword
dans la pageCompte

--- a/trambleo/src/main/resources/org/example/trambleo/editEmailPopUp.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/editEmailPopUp.fxml
@@ -22,5 +22,5 @@
          <TextField fx:id="confirmerEmail" promptText="Entrez votre nouvelle adresse e-mail" />
       </children>
    </VBox>
-    <Button onAction="#onModifierEmailBoutonClick" text="Valider" />
+    <Button text="Valider" />
 </VBox>
