Associe employé à un projet

--- a/trambleo/src/main/resources/org/example/trambleo/hello-createProject.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-createProject.fxml
@@ -52,4 +52,5 @@
          </Button>
       </children>
    </HBox>
+   <Label fx:id="messageConfirmation" style="-fx-text-fill: #FF0000;" />
 </VBox>
