--- a/trambleo/src/main/resources/org/example/trambleo/viewInProject.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/viewInProject.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -34,6 +35,7 @@
                <Insets left="5.0" />
             </HBox.margin>
          </HBox>
+         <Button mnemonicParsing="false" text="Modifier le projet" />
       </children>
    </HBox>
    <HBox prefHeight="414.0" prefWidth="1280.0">
