--- a/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
@@ -23,7 +23,7 @@
             <Button mnemonicParsing="false" onAction="#onNouveauProjetButtonClick" text="Créer un projet" />
          </children>
       </HBox>
-      <HBox prefHeight="638.0" prefWidth="1280.0">
+      <HBox prefHeight="638.0" prefWidth="1280.0" spacing="20.0">
          <VBox.margin>
             <Insets left="15.0" right="15.0" />
          </VBox.margin>
