--- a/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
@@ -23,20 +23,13 @@
             <Button mnemonicParsing="false" onAction="#onNouveauProjetButtonClick" text="Créer un projet" />
          </children>
       </HBox>
-      <HBox prefHeight="638.0" prefWidth="1280.0" spacing="20.0">
+      <HBox fx:id="carteProjet" prefHeight="638.0" prefWidth="1280.0" spacing="20.0">
          <VBox.margin>
             <Insets left="15.0" right="15.0" />
          </VBox.margin>
          <padding>
             <Insets bottom="15.0" left="15.0" right="50.0" top="15.0" />
          </padding>
-         <children>
-            <fx:include source="hello-carteProjet.fxml" />
-            <fx:include source="hello-carteProjet.fxml" />
-            <fx:include source="hello-carteProjet.fxml" />
-            <fx:include source="hello-carteProjet.fxml" />
-            <fx:include source="hello-carteProjet.fxml" />
-         </children>
       </HBox>
    </children>
 </VBox>
