--- a/trambleo/src/main/resources/org/example/trambleo/editEmailPopUp.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/editEmailPopUp.fxml
@@ -4,23 +4,56 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="500.0" prefWidth="500.0" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloController">
+<VBox alignment="CENTER" prefHeight="500.0" prefWidth="500.0" spacing="20.0" style="-fx-background-color: #E9EFFF;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.ControllerEditEmailPopUp">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
-    <Label fx:id="welcomeText" text="Modifier mon adresse e-mail" />
+    <Label fx:id="welcomeText" text="Modifier mon adresse e-mail">
+      <font>
+         <Font name="System Bold" size="18.0" />
+      </font></Label>
    <VBox prefHeight="200.0" prefWidth="100.0">
       <children>
          <Label text="Ancienne adresse e-mail :" />
-         <TextField fx:id="ancienEmail" promptText="Entrez votre ancienne adresse e-mail" />
-         <Label text="Nouvelle adresse e-mail :" />
-         <TextField fx:id="nouveauEmail" promptText="Entrez votre nouvelle adresse e-mail" />
-         <Label text="Confirmer  nouvelle adresse e-mail :" />
-         <TextField fx:id="confirmerEmail" promptText="Entrez votre nouvelle adresse e-mail" />
+         <TextField fx:id="ancienEmail" promptText="Entrez votre ancienne adresse e-mail">
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin></TextField>
+         <Label text="Nouvelle adresse e-mail :">
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin></Label>
+         <TextField fx:id="nouveauEmail" promptText="Entrez votre nouvelle adresse e-mail">
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin></TextField>
+         <Label text="Confirmer  nouvelle adresse e-mail :">
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin></Label>
+         <TextField fx:id="confirmerEmail" promptText="Entrez votre nouvelle adresse e-mail">
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin></TextField>
       </children>
    </VBox>
-    <Button text="Valider" />
+   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+      <children>
+         <Button mnemonicParsing="false" onMouseClicked="#onAnnulerBoutonClick" style="-fx-background-color: #ea767c;" text="Annuler">
+            <HBox.margin>
+               <Insets right="5.0" />
+            </HBox.margin>
+         </Button>
+          <Button style="-fx-background-color: #847CAE;" text="Valider">
+            <HBox.margin>
+               <Insets left="5.0" />
+            </HBox.margin>
+         </Button>
+      </children>
+   </HBox>
 </VBox>
