--- a/trambleo/src/main/resources/org/example/trambleo/editPasswordPopUp.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/editPasswordPopUp.fxml
@@ -4,23 +4,56 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="500.0" prefWidth="500.0" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloController">
+<VBox alignment="CENTER" prefHeight="500.0" prefWidth="500.0" spacing="20.0" style="-fx-background-color: #E9EFFF;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.ControllerEditPasswordPopUp">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
-    <Label fx:id="welcomeText" text="Modifier mon mot de passe" />
+    <Label fx:id="welcomeText" text="Modifier mon mot de passe">
+      <font>
+         <Font name="System Bold" size="18.0" />
+      </font></Label>
     <VBox prefHeight="200.0" prefWidth="100.0">
         <children>
             <Label text="Ancien mot de passe :" />
-            <TextField promptText="Entrez votre ancien mot de passe" />
-            <Label text="Nouveau mot de passe :" />
-            <TextField promptText="Entrez votre nouveau mot de passe" />
-            <Label text="Confirmer  nouvelau mot de passe :" />
-            <TextField promptText="Entrez votre nouveau mot de passe" />
+            <TextField fx:id="ancienPassword" promptText="Entrez votre ancien mot de passe">
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin></TextField>
+            <Label text="Nouveau mot de passe :">
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin></Label>
+            <TextField fx:id="nouveauPassword" promptText="Entrez votre nouveau mot de passe">
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin></TextField>
+            <Label text="Confirmer  nouvelau mot de passe :">
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin></Label>
+            <TextField fx:id="confirmerPassword" promptText="Entrez votre nouveau mot de passe">
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin></TextField>
         </children>
     </VBox>
-    <Button onAction="#onHelloButtonClick" text="Valider" />
+   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+      <children>
+         <Button mnemonicParsing="false" onMouseClicked="#onAnnulerBoutonClick" style="-fx-background-color: #ea767c;" text="Annuler">
+            <HBox.margin>
+               <Insets right="5.0" />
+            </HBox.margin>
+         </Button>
+          <Button onMouseClicked="#onModifierPasswordBouton" style="-fx-background-color: #847CAE;" text="Valider">
+            <HBox.margin>
+               <Insets left="5.0" />
+            </HBox.margin>
+         </Button>
+      </children>
+   </HBox>
 </VBox>
