--- a/trambleo/src/main/resources/org/example/trambleo/viewInProject.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/viewInProject.fxml
@@ -8,14 +8,19 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="720.0" prefWidth="1280.0" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloController">
+<VBox prefHeight="720.0" prefWidth="1280.0" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.ControllerViewInpProject">
     <fx:include source="hello-navbar.fxml" />
    <HBox prefHeight="46.0" prefWidth="1280.0">
       <children>
-         <Label text="Nom du projet :">
+         <Label fx:id="nomProjet" text="Nom du projet">
             <font>
                <Font name="System Bold" size="13.0" />
             </font>
+         </Label>
+         <Label fx:id="dateFinProjet" prefHeight="22.0" prefWidth="60.0" text="Date fin ">
+            <HBox.margin>
+               <Insets left="5.0" />
+            </HBox.margin>
          </Label>
          <HBox prefHeight="65.0" prefWidth="200.0" style="-fx-background-color: #cfdffb;">
             <children>
@@ -26,14 +31,17 @@
                   </HBox.margin>
                </Circle>
             </children>
+            <HBox.margin>
+               <Insets left="100.0" />
+            </HBox.margin>
          </HBox>
-         <HBox prefHeight="100.0" prefWidth="200.0">
-            <children>
-               <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="111.0" prefWidth="221.0" style="-fx-background-color: #cfdffb;" text="Vue Calendrier" />
-            </children>
+         <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
             <HBox.margin>
                <Insets left="5.0" />
             </HBox.margin>
+            <children>
+               <Button alignment="CENTER" mnemonicParsing="false" text="Vue calendrier" />
+            </children>
          </HBox>
          <Button mnemonicParsing="false" text="Modifier le projet" />
       </children>
