--- a/trambleo/src/main/resources/org/example/trambleo/hello-createtask.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-createtask.fxml
@@ -11,34 +11,86 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="500.0" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerCreateTask">
+<VBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="500.0" spacing="20.0" style="-fx-background-color: #E9EFFF;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerCreateTask">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
     <Label fx:id="welcomeText" text="Créer une Tâche">
       <font>
-         <Font name="System Bold" size="13.0" />
+         <Font name="System Bold" size="18.0" />
       </font></Label>
    <VBox prefHeight="200.0" prefWidth="100.0">
       <children>
          <Label text="Nom :" />
-         <TextField promptText="Entrez le nom" />
-         <Label text="Description :" />
-         <TextField promptText="Entrez la description" />
-         <Label text="Priorité :" />
+         <TextField promptText="Entrez le nom">
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin></TextField>
+         <Label text="Description :">
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin></Label>
+         <TextField promptText="Entrez la description">
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin></TextField>
+         <Label text="Priorité :">
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin></Label>
          <HBox prefHeight="100.0" prefWidth="200.0">
             <children>
                <CheckBox mnemonicParsing="false" text="Faible" />
-               <CheckBox mnemonicParsing="false" text="Moyenne" />
-               <CheckBox mnemonicParsing="false" text="Elevé" />
+               <CheckBox mnemonicParsing="false" text="Moyenne">
+                  <HBox.margin>
+                     <Insets left="10.0" />
+                  </HBox.margin></CheckBox>
+               <CheckBox mnemonicParsing="false" text="Elevé">
+                  <HBox.margin>
+                     <Insets left="10.0" />
+                  </HBox.margin></CheckBox>
+            </children>
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin>
+         </HBox>
+         <Label text="Date de fin :">
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin></Label>
+         <DatePicker>
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin></DatePicker>
+         <Label text="Employés :">
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin></Label>
+         <HBox prefHeight="100.0" prefWidth="200.0">
+            <children>
+               <ComboBox prefWidth="150.0" />
+               <Button mnemonicParsing="false" style="-fx-background-color: #847CAE;" text="Attribuer employé">
+                  <HBox.margin>
+                     <Insets left="20.0" />
+                  </HBox.margin>
+               </Button>
             </children>
          </HBox>
-         <Label text="Date de fin :" />
-         <DatePicker />
-         <Label text="Employés :" />
-         <ComboBox prefWidth="150.0" />
       </children>
    </VBox>
-   <Button mnemonicParsing="false" text="Créer Tâche" />
+   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+      <children>
+         <Button mnemonicParsing="false" style="-fx-background-color: #ea767c;" text="Annuler">
+            <HBox.margin>
+               <Insets right="5.0" />
+            </HBox.margin>
+         </Button>
+         <Button mnemonicParsing="false" style="-fx-background-color: #847CAE;" text="Créer Tâche">
+            <HBox.margin>
+               <Insets left="5.0" />
+            </HBox.margin>
+         </Button>
+      </children>
+   </HBox>
 </VBox>
