--- a/trambleo/src/main/resources/org/example/trambleo/viewInProject.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/viewInProject.fxml
@@ -12,12 +12,12 @@
     <fx:include source="hello-navbar.fxml" />
    <HBox prefHeight="46.0" prefWidth="1280.0">
       <children>
-         <Label fx:id="nomProjet" text="Nom du projet">
+         <Label fx:id="nomProjet" prefHeight="76.0" prefWidth="158.0" text="Nom du projet">
             <font>
-               <Font name="System Bold" size="13.0" />
+               <Font name="System Bold" size="18.0" />
             </font>
          </Label>
-         <Label fx:id="dateFinProjet" prefHeight="22.0" prefWidth="60.0" text="Date fin ">
+         <Label fx:id="dateFinProjet" prefHeight="22.0" prefWidth="122.0" text="Date fin ">
             <HBox.margin>
                <Insets left="5.0" />
             </HBox.margin>
@@ -43,7 +43,7 @@
                <Button alignment="CENTER" mnemonicParsing="false" text="Vue calendrier" />
             </children>
          </HBox>
-         <Button mnemonicParsing="false" text="Modifier le projet" />
+         <Button mnemonicParsing="false" onAction="#onModifierProjetButtonClick" text="Modifier le projet" />
       </children>
    </HBox>
    <HBox prefHeight="414.0" prefWidth="1280.0">
