--- a/trambleo/src/main/resources/org/example/trambleo/editEmailPopUp.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/editEmailPopUp.fxml
@@ -32,7 +32,7 @@
             <VBox.margin>
                <Insets top="5.0" />
             </VBox.margin></TextField>
-         <Label text="Confirmer  nouvelle adresse e-mail :">
+         <Label text="Confirmer la nouvelle adresse e-mail :">
             <VBox.margin>
                <Insets top="20.0" />
             </VBox.margin></Label>
