--- a/trambleo/src/main/resources/org/example/trambleo/editPasswordPopUp.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/editPasswordPopUp.fxml
@@ -32,7 +32,7 @@
             <VBox.margin>
                <Insets top="5.0" />
             </VBox.margin></TextField>
-            <Label text="Confirmer  nouvelau mot de passe :">
+            <Label text="Confirmer le nouveau mot de passe :">
             <VBox.margin>
                <Insets top="20.0" />
             </VBox.margin></Label>
