--- a/trambleo/src/main/resources/org/example/trambleo/hello-vueCalendrier.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-vueCalendrier.fxml
@@ -6,6 +6,7 @@
 
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <fx:include source="hello-navbar.fxml" />
    <children>
       <Label prefHeight="775.0" prefWidth="1306.0" text="Vue calendrier">
          <font>
